--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "svelte": "^3.46.0",
     "svelte-check": "^2.2.6",
+    "svelte-hot-loader": "^1.5.0",
     "svelte-preprocess": "^4.10.1",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
