--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.20.0",
+    "@rollup/plugin-alias": "^3.1.9",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "svelte": "^3.46.0",
+    "path": "^0.12.7",
+    "sass": "^1.49.11",
+    "svelte": "^3.46.6",
     "svelte-check": "^2.2.6",
     "svelte-hot-loader": "^1.5.0",
     "svelte-preprocess": "^4.10.1",
@@ -33,6 +37,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "list": "^2.0.19"
   }
 }
